<resources>
    <string name="app_name">component</string>
    <string name="txt1">plain</string>
    <string name="capitale">CAPITALE</string>
    <string name="bold">bold</string>
    <string name="italic">italic</string>
    <string name="myHint">Développer des application Androids</string>
    <string name="plain">Plain</string>
    <string name="serif">Serif</string>
    <string name="noir">Noir</string>
    <string name="rouge">Rouge</string>
    <string name="jaunne">Jaunne</string>
    <string name="vert">Vert</string>
    <string name="choices">Choices</string>
    <array name="saisons">
        <item>printemps</item>
        <item>été</item>
        <item>automne</item>
        <item>hiver</item>
    </array>
</resources>