<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Radio">
<RadioGroup
    android:id="@+id/radioGroupe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton
        android:id="@+id/noir"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noir"
    android:layout_gravity="left"
        />
    <RadioButton
        android:id="@+id/rouge"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rouge"
    android:layout_gravity="left"
        />
    <RadioButton
        android:id="@+id/jaunne"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jaunne"
    android:layout_gravity="left"
        />
    <RadioButton
        android:id="@+id/vert"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vert"
    android:layout_gravity="left"
        />
    </RadioGroup>
</LinearLayout>